--- a/backend/package.json
+++ b/backend/package.json
@@ -12,22 +12,22 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "1.18.3",
+    "body-parser": "^1.20.2",
     "consign": "0.1.6",
     "cors": "2.8.4",
-    "express": "4.16.3",
-    "jwt-simple": "0.5.1",
-    "knex": "0.15.2",
-    "moment": "2.22.2",
+    "express": "^4.18.2",
+    "jwt-simple": "^0.5.6",
+    "knex": "^3.1.0",
+    "moment": "^2.30.1",
     "mongoose": "^5.2.17",
     "node-schedule": "1.3.0",
-    "passport": "0.4.0",
-    "passport-jwt": "4.0.0",
-    "pg": "7.4.3",
-    "pm2": "3.0.4"
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "pg": "^8.11.3",
+    "pm2": "^5.3.1"
   },
   "devDependencies": {
     "@types/knex": "^0.16.1",
-    "nodemon": "1.18.4"
+    "nodemon": "^3.0.3"
   }
 }
