--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.20.2",
     "consign": "0.1.6",
@@ -27,6 +28,7 @@
     "pm2": "^5.3.1"
   },
   "devDependencies": {
+    "@types/bcrypt-nodejs": "^0.0.31",
     "@types/knex": "^0.16.1",
     "nodemon": "^3.0.3"
   }
