--- a/backend/package.json
+++ b/backend/package.json
@@ -15,20 +15,19 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.20.2",
     "consign": "0.1.6",
-    "cors": "2.8.4",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jwt-simple": "^0.5.6",
     "knex": "^3.1.0",
     "moment": "^2.30.1",
-    "mongoose": "^5.2.17",
-    "node-schedule": "1.3.0",
+    "mongoose": "^8.1.1",
+    "node-schedule": "^2.1.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
     "pm2": "^5.3.1"
   },
   "devDependencies": {
-    "@types/bcrypt-nodejs": "^0.0.31",
     "@types/knex": "^0.16.1",
     "nodemon": "^3.0.3"
   }
