--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,24 +8,28 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "0.18.0",
-    "bootstrap-vue": "2.0.0-rc.11",
+    "axios": "^1.6.7",
+    "bootstrap-vue": "^2.23.1",
     "font-awesome": "4.7.0",
-    "highlightjs": "9.10.0",
-    "liquor-tree": "0.2.32",
-    "vue": "2.5.17",
-    "vue-gravatar": "1.2.1",
-    "vue-mq": "0.2.1",
-    "vue-router": "3.0.1",
-    "vue-toasted": "1.1.24",
-    "vue2-editor": "2.6.6",
-    "vuex": "3.0.1"
+    "highlightjs": "^9.16.2",
+    "liquor-tree": "^0.2.70",
+    "vue": "^3.4.15",
+    "vue-editor": "^0.0.0",
+    "vue-gravatar": "^1.4.1",
+    "vue-mq": "^1.0.1",
+    "vue-router": "^4.2.5",
+    "vue-toasted": "^1.1.28",
+    "vue2-editor": "^2.10.3",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "3.0.1",
-    "@vue/cli-plugin-eslint": "3.0.1",
-    "@vue/cli-service": "3.0.1",
-    "vue-template-compiler": "2.5.17"
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^9.21.0",
+    "vue-template-compiler": "^2.7.16"
   },
   "eslintConfig": {
     "root": true,
@@ -38,7 +42,10 @@
     ],
     "rules": {},
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "espree",
+      "ecmaVersion": 2018,
+      "sourceType": "module",
+      "allowImportExportEverywhere": true
     }
   },
   "postcss": {
