--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,7 @@
     "font-awesome": "4.7.0",
     "highlightjs": "^9.16.2",
     "liquor-tree": "^0.2.70",
-    "vue": "^3.4.15",
-    "vue-editor": "^0.0.0",
+    "vue": "^3.4.19",
     "vue-gravatar": "^1.4.1",
     "vue-mq": "^1.0.1",
     "vue-router": "^4.2.5",
@@ -29,7 +28,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.21.0",
-    "vue-template-compiler": "^2.7.16"
+    "html-webpack-plugin": "^5.6.0",
+    "vue-template-compiler": "^2.7.16",
+    "vueify": "^9.4.1"
   },
   "eslintConfig": {
     "root": true,
