--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/compat": "^3.4.19",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
     "font-awesome": "4.7.0",
     "highlightjs": "^9.16.2",
