--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,7 @@
     "jwt-simple": "^0.5.6",
     "knex": "^3.1.0",
     "moment": "^2.30.1",
-    "mongoose": "^8.1.1",
+    "mongoose": "^8.1.3",
     "node-schedule": "^2.1.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -28,6 +28,7 @@
     "pm2": "^5.3.1"
   },
   "devDependencies": {
+    "@types/bcrypt-nodejs": "^0.0.31",
     "@types/knex": "^0.16.1",
     "nodemon": "^3.0.3"
   }
