--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jwt-simple": "^0.5.6",
     "knex": "^3.1.0",
     "moment": "^2.30.1",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.1.3",
     "node-schedule": "^2.1.1",
     "passport": "^0.7.0",
