--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
+    "epic-spinners": "^2.0.0",
     "font-awesome": "4.7.0",
     "highlightjs": "^9.16.2",
     "liquor-tree": "^0.2.70",
@@ -23,6 +24,7 @@
     "vue-toasted": "^1.1.28",
     "vue-toastification": "^2.0.0-rc.5",
     "vue2-editor": "^2.10.3",
+    "vue3-gravatar": "^3.0.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
