--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon",
+    "start": "nodemon index.js",
     "production": "pm2 start index.js --name knowledge-backend"
   },
   "keywords": [],
