--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
+    "consolidate": "^1.0.3",
     "epic-spinners": "^2.0.0",
     "font-awesome": "4.7.0",
     "highlightjs": "^9.16.2",
