--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "production": "pm2 start index.js --name knowledge-backend"
+    "production": "pm2 start index.js --name speed_drive-backend"
   },
   "keywords": [],
   "author": "",
@@ -18,19 +18,20 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jwt-simple": "^0.5.6",
-    "knex": "^3.1.0",
+    "knex": "^0.21.1",
     "moment": "^2.30.1",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.1.3",
+    "mongoose": "^8.3.3",
     "node-schedule": "^2.1.1",
+    "objection": "^2.1.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "pg": "^8.11.3",
+    "pg": "^8.0.3",
     "pm2": "^5.3.1"
   },
   "devDependencies": {
     "@types/bcrypt-nodejs": "^0.0.31",
     "@types/knex": "^0.16.1",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.1.0"
   }
 }
